Dark mode background fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,31 +5,16 @@
 @tailwind utilities;
 
 :root {
-  --background: #171717; 
-  --foreground: #ededed; 
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #FFFFFF; 
-    --foreground: #171717; 
-  }
+  --background: #FFFFFF; /* Fondo blanco */
+  --foreground: #171717; 
 }
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: var(--background); /* El fondo siempre será blanco */
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-
-/* @font-face {
-  font-family: 'Work Sans';
-  /* src: url('/path/to/your/font.woff2') format('woff2'),
-       url('/path/to/your/font.woff') format('woff'); */
-  /* font-weight: 300 600;
-  font-style: normal; */
-/* } */
 
 @layer utilities {
   .bg-\[url\(\'\/assets\/footer-bg\.png\'\)\] {
@@ -43,8 +28,6 @@ body {
   .card_grid {
     @apply w-full pb-10 px-4 flex flex-col items-center sm:grid sm:grid-cols-2 md:grid-cols-3 gap-4 sm:px-20;
   }
-
-
 
   .button-primary {
     @apply px-14 py-4 border-2 text-20-medium shadow-md transition-all duration-500;
